- CUDA: compilation now defaults to `-ffp-contract=fast`, previously it was `-ffp-contract=on`.
- `-cl-fast-relaxed-math` now defaults to `-ffp-contract=fast`, previously it was `-ffp-contract=on`.
- CPU drivers: renamed 'basic' to 'cpu-minimal' and 'pthread' driver to 'cpu',
  to reflect the hardware they're driving instead of implementation details.

Notable Fixes
-------------

- Fix handling of clBuildProgram() -I directories given with quotes or
  with leading/trailing white space.
- Fix long kernel names trying to create too long dir/filenames. This
  affected programs with long kernel names generated by template
  specialization.
- CPU driver: Made kernel debug info more robust especially
  when building the device program from SPIR-V.

3.1 December 2022
=================

Notable User Facing Changes
---------------------------

- Support for Clang/LLVM 15.0
- Work-in-progress Vulkan-driver:
  * implement clEnqRead/Copy/WriteRect + clEnqFillBuffer
  * implement global offsets
  * add support for external memory
  * implement WG sizes larger than vulkan limits with global offsets
  * fix module constants
  * and other small fixes and improvements
- SPIR-V support: much improved support for both CPU driver and CUDA
  * vectorized versions of kernel library functions now supported
  * much improved support on ARM64 & x86-64 with recent LLVMs
  * fixed some atomic builtin functions
  * SPIR-V new subtests from OpenCL-CTS now pass (with sufficiently recent
    llvm-spirv translator)
  * most of the CTS passes with offline-compile=spirv option
  * specialization constants are supported via clSetProgramSpecializationConstant
- improved Valgrind/Helgrind support
- All device names used to control the platform setup via
  POCL_DEVICES are now lower case (as documented in the user manual).
- Switch from __sync_*() to __atomic_*() (compiler builtins).
- Link with -latomic (compiler library) in case that is needed for using
  64-bit atomic operations, e.g. on mipsel.